--- a/css/application.css
+++ b/css/application.css
@@ -108,15 +108,16 @@ nav a {
       padding: 5px;
       color: #000;
       font-size: 1.125em; } }
-  nav a:hover {
-    background-color: #808080;
-    color: #fff; }
-    @media (min-width: 768px) {
-      nav a:hover {
-        background-color: #f6f6f6;
-        color: #a9a9a9; } }
   nav a:visited {
-    color: #808080; }
+    color: #d3d3d3; }
+
+nav a:hover {
+  background-color: #808080;
+  color: #fff; }
+  @media (min-width: 768px) {
+    nav a:hover {
+      background-color: #f6f6f6;
+      color: #a9a9a9; } }
 
 .top-div {
   background-color: #f6f6f6;
