--- a/scss/application.scss
+++ b/scss/application.scss
@@ -2,5 +2,5 @@
 
 @import 'utilities/index';
 @import 'base/index';
-@import 'components/navigation';
+@import 'components/index';
 @import 'layout/index';
